[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/PlayerDash.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.219608, 1, 0, 1 )

[node name="PlayerDash" type="KinematicBody"]
collision_mask = 3
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="UI" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 602.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractLabel" type="Label" parent="UI"]
visible = false
margin_left = 9.0
margin_top = 515.0
margin_right = 1022.0
margin_bottom = 546.0
text = "Dash Through Wall"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progressbar" type="ProgressBar" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = 57.0
margin_right = 29.0
margin_bottom = 71.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 1, 0.8 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
current = true
fov = 104.2

[node name="InteractRayCast" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collide_with_areas = true

[node name="DashRayCast" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -5 )
